Arreglo de bugs de navegacion en algunas pagianas e de igual forma comienzo de la visualizacion del carito

--- a/vistas/publico/carrito.html
+++ b/vistas/publico/carrito.html
@@ -68,42 +68,12 @@ TODO importante // realtando algo
                                         <th scope="col">Cantidad</th>
                                         <th scope="col">Sub-total</th>
                                         <th scope="col"></th>
+                                        <th scope="col"></th>
                                     </tr>
                                 </thead>
                                 <!-- Cuerpo de la tabla -->
-                                <tbody class="text-center align-middle">
-                                    <tr class="table-row">
-                                        <td>
-                                            <img src="../../recursos/imagenes/sneakersExample.svg" alt="Foto zapato"
-                                                height="50">
-                                        </td>
-                                        <td>Marca 1 Dunk bajo</td>
-                                        <td>12</td>
-                                        <td>Rosado</td>
-                                        <td>$185</td>
-                                        <td>1</td>
-                                        <td>$185</td>
-                                        <td>
-                                            <img src="../../recursos/imagenes/basura.svg" alt="Icono de basura"
-                                                class="imgBasura">
-                                        </td>
-                                    </tr>
-                                    <tr class="table-row">
-                                        <td>
-                                            <img src="../../recursos/imagenes/sneakersExample.svg" alt="Foto zapato"
-                                                height="50">
-                                        </td>
-                                        <td>Marca 1 Dunk bajo</td>
-                                        <td>12</td>
-                                        <td>Rosado</td>
-                                        <td>$185</td>
-                                        <td>1</td>
-                                        <td>$185</td>
-                                        <td>
-                                            <img src="../../recursos/imagenes/basura.svg" alt="Icono de basura"
-                                                class="imgBasura">
-                                        </td>
-                                    </tr>
+                                <tbody class="text-center align-middle" id="tableBody">
+                                    
                                 </tbody>
                             </table>
                         </div>
@@ -173,8 +143,7 @@ TODO importante // realtando algo
                                         <!--TELEFONO-->
                                         <div class="col-md-6 mt-3">
                                             <input type="text" class="form-control" id="telefonoInput"
-                                                placeholder="Ingresa el número telefonico" value="7084-2281"
-                                                required>
+                                                placeholder="Ingresa el número telefonico" value="7084-2281" required>
                                         </div>
                                     </form>
                                 </div>
