--- a/vistas/publico/configuraciones.html
+++ b/vistas/publico/configuraciones.html
@@ -213,10 +213,10 @@
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
-    <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
-    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="/controlador/publico/configuraciones.js"></script>
+    <script type="text/javascript" src="../../controlador/publico/configuraciones.js"></script>
 </body>
 
 </html>
