--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -244,9 +244,9 @@ TODO importante // realtando algo
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
-    <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/publico.js"></script>
     <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="/controlador/publico/sobre_nosotros.js"></script>
+    <script type="text/javascript" src="../../controlador/publico/sobre_nosotros.js"></script>
 </body>
 
 </html>
