--- a/vistas/publico/tuspedidos.html
+++ b/vistas/publico/tuspedidos.html
@@ -309,10 +309,10 @@ TODO importante // realtando algo
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
-    <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
-    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="/controlador/publico/tuspedidos.js"></script>
+    <script type="text/javascript" src="../../controlador/publico/tuspedidos.js"></script>
 </body>
 
 </html>
