Carrito, ya con api y conectado con el html pero falta comprobar si funciona

--- a/vistas/publico/carrito.html
+++ b/vistas/publico/carrito.html
@@ -228,6 +228,7 @@ TODO importante // realtando algo
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <script type="text/javascript" src="../../controlador/utilidades/publico.js"></script>
     <!-- *Llamada al controlador de carrito -->
     <script type="text/javascript" src="../../controlador/publico/carrito.js"></script>
