--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -444,6 +444,7 @@ TODO importante // realtando algo
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
     <script type="text/javascript" src="../../controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/publico/index.js"></script>
 </body>
