--- a/vistas/publico/tuspedidos.html
+++ b/vistas/publico/tuspedidos.html
@@ -63,6 +63,7 @@ TODO importante // realtando algo
                             <div class="col-11 d-flex justify-content-end">
                                 <select class="form-select rounded-3 text-center text-white bg-color-1gray"
                                     id="buscadorInput" required>
+                                    <option value="0">Todos</option>
                                     <option value="1">Pendiente</option>
                                     <option value="2">En camino</option>
                                     <option value="3">Entregado</option>
@@ -79,140 +80,9 @@ TODO importante // realtando algo
             </div>
             <!--Contenedor para visualizar los pedidos realizados-->
             <div class="col-lg-12 d-flex justify-content-center align-items-center">
-                <div class="col-lg-10">
+                <div class="col-lg-10" id="contenedorDePedidos">
                     <!--Comienzo de cards de zapatos-->
-                    <div id="cardsDeZapato" class="col-lg-12">
-                        <div class="accordion mt-3 mb-4" id="detalleInformacionPedido">
-                            <div class="accordion-item">
-                                <!--HEADER del accordion-->
-                                <div id="detalleInformacionHeaderRepatidor" class="accordion-header"
-                                    data-bs-parent="#detalleInformacionPedido">
-                                    <!--Etiqueta del pedido-->
-                                    <div class="col-lg-3">
-                                        <p id="idPedidoNum2"
-                                            class="rounded-top text-center pt-2 pb-2 titillium-web-bold color-5blue">
-                                            Pedido N# 4322
-                                        </p>
-                                    </div>
-                                    <!--Contenedor del cuerpo-->
-                                    <div id="contenedorDelAcordionSoloHeaderAndBody2">
-                                        <div class="col-lg-12 container mt-3 d-flex flex-wrap m-3 justify-content-center align-items-center"
-                                            id="header">
-                                            <!--Contenedor de la etiqueta del pedido-->
-                                            <div class="d-none offset-lg-9 col-lg-3 bg-danger pt-1 mb-3 rounded skew-div"
-                                                id="colorDelEstadoDelPedido">
-                                                <h6 class="text-white skew-text text-center"
-                                                    id="nombreDelEstadoDelPedido">
-                                                    Pendiente
-                                                </h6>
-                                            </div>
-                                            <!-- Detalles del Más Pedido (Body) del acordion-->
-                                            <div id="collapseOnePedido"
-                                                class="accordion-collapse collapse show col-lg-12">
-                                                <div class="accordion-body" id="detallesDeMasPedidoRepartidor">
-                                                    <div class="col-lg-12">
-                                                        <div
-                                                            class="container d-flex align-items-center justify-content-center">
-                                                            <!--Comienzo de cards de zapato-->
-                                                            <div class="containerCards col-lg-3 d-flex flex-wrap m-3">
-                                                                <div class="containerCard col-lg-12 flex-wrap"
-                                                                    id="cardPedido">
-                                                                    <div class="card">
-                                                                        <!--Contenedor de la imagen-->
-                                                                        <img src="../../recursos/imagenes/sneakersExample.svg"
-                                                                            class="card-img-top img-fluid"
-                                                                            alt="Imagen de zapato">
-                                                                        <!--Contenedor del cuerpo de la card-->
-                                                                        <div class="card-body">
-                                                                            <!--Contenedor de nombre zapato-->
-                                                                            <div
-                                                                                class="ContenedorNombreZapato col-lg-12">
-                                                                                <h4 class="titillium-web-semibold text-center"
-                                                                                    id="nombreZapato">
-                                                                                    Nike
-                                                                                    Air
-                                                                                    Force 1'07
-                                                                                </h4>
-                                                                            </div>
-                                                                            <!--Contenedor del color y talla-->
-                                                                            <div
-                                                                                class="ContenedorColorTalla col-lg-12 d-flex">
-                                                                                <div class="col-lg-6 d-flex mt-3 justify-content-center align-items-center"
-                                                                                    id="contenedorColor">
-                                                                                    <h6
-                                                                                        class="titillium-web-extralight me-1">
-                                                                                        Color
-                                                                                    </h6>
-                                                                                    <div id="color" class="mb-2">
-                                                                                    </div>
-                                                                                </div>
-                                                                                <div class="col-lg-6 d-flex mt-3 justify-content-center align-items-center"
-                                                                                    id="contenedorTalla">
-                                                                                    <h6
-                                                                                        class="titillium-web-extralight me-1">
-                                                                                        Talla:
-                                                                                    </h6>
-                                                                                    <div id="talla">
-                                                                                        <h6 id="tallaPedido">
-                                                                                            32
-                                                                                        </h6>
-                                                                                    </div>
-                                                                                </div>
-                                                                            </div>
-                                                                            <!--Contenedor de la cantidad-->
-                                                                            <div
-                                                                                class="contenedorCantidad col-lg-12 justify-content-center align-items-center mt-2">
-                                                                                <h6 class="titillium-web-extralight text-center"
-                                                                                    id="cantidadPedido">
-                                                                                    Cantidad:
-                                                                                    12
-                                                                                </h6>
-                                                                            </div>
-                                                                        </div>
-                                                                        <!--Contenedor del footer-->
-                                                                        <div class="card-footer bg-color-4blue">
-                                                                            <!--Contenedor del precio-->
-                                                                            <div
-                                                                                class="d-flex contenedorPrecios col-lg-12">
-                                                                                <div
-                                                                                    class="col-lg-6 d-flex justify-content-start">
-                                                                                    <h6 class="titillium-web-bold text-white"
-                                                                                        id="precioZapato">
-                                                                                        $120
-                                                                                    </h6>
-                                                                                </div>
-                                                                                <div
-                                                                                    class="col-lg-6 d-flex justify-content-end">
-                                                                                    <h6 class="titillium-web-extralight text-white"
-                                                                                        id="cantidadTotal">
-                                                                                        Total:
-                                                                                        $1,440
-                                                                                    </h6>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Botón (Footer) -->
-                                    <div class="offset-lg-9 col-lg-3">
-                                        <button id="accordionButtonPrecioTotal"
-                                            class="accordion-button rounded-bottom rounded-top-0" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#collapseOnePedido"
-                                            aria-expanded="true" aria-controls="collapseOnePedido">
-                                            Total del pedido: $1,440
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
             <div class="offset-lg-1 col-lg-10 mb-4">
@@ -265,7 +135,10 @@ TODO importante // realtando algo
 
                             <!-- Campo de calificacion -->
                             <div class="col-12 d-flex flex-column justify-content-center">
-                                <label for="calificacion" class="form-label col-12 d-flex justify-content-center mb-0 mt-2"><h3 class="titillium-web text20">Calificación</h3></label>
+                                <label for="calificacion"
+                                    class="form-label col-12 d-flex justify-content-center mb-0 mt-2">
+                                    <h3 class="titillium-web text20">Calificación</h3>
+                                </label>
                                 <div class="col-12 container1 d-flex justify-content-center">
                                     <div class="star">
                                         <a href="#" class="bi-star-fill estrella"></a>
@@ -275,7 +148,7 @@ TODO importante // realtando algo
                                         <a href="#" class="bi-star-fill estrella"></a>
                                     </div>
                                 </div>
-                                
+
                             </div>
 
                             <!-- Botones en el pie del modal -->
