--- a/vistas/publico/configuraciones.html
+++ b/vistas/publico/configuraciones.html
@@ -87,11 +87,11 @@
                         <!-- Contenedor de información del usuario -->
                         <div class="contenedorNombre">
                             <!-- Contenedor para el nombre del usuario -->
-                            <h3 class="titillium-web-regular" id="nombreDeUsuario"> Emiliano Hernandez</h3>
+                            <h3 class="titillium-web-regular" id="nombreDeUsuario"></h3>
                         </div>
                         <div class="contenedorCorreo position-relative">
                             <!-- Contenedor para la dirección de correo del usuario -->
-                            <h6 class="titillium-web-extralight" id="correoDeUsuario">emilianito@gmail.com.sv</h6>
+                            <h6 class="titillium-web-extralight" id="correoDeUsuario"></h6>
                             <!-- Línea decorativa debajo del correo -->
                             <div class="linea1"></div>
                         </div>
@@ -99,46 +99,46 @@
                 </div>
                 <!--Contenedor del formulario para cambiar-->
                 <div class="contenedorForm d-flex flex-column">
-                    <form class="row needs-validation form1 position-relative" novalidate>
+                    <form class="row needs-validation form1 position-relative" novalidate id="infoForm">
                         <!--Formulario de nombre-->
                         <div class="col-md-6">
                             <label for="nombreInput" class="form-label">Nombres</label>
-                            <input type="text" class="form-control" id="nombreInput" required readonly value="Emiliano">
+                            <input type="text" class="form-control" id="nombreInput" required readonly
+                                name="nombreInput">
                         </div>
                         <!--Formulario de apellido-->
                         <div class="col-md-6">
                             <label for="apellidosInput" class="form-label ">Apellidos</label>
                             <input type="text" class="form-control" id="apellidosInput" required readonly
-                                value="Hernandéz">
+                                name="apellidosInput">
                         </div>
                         <!--Formulario de DUI-->
                         <div class="col-md-6 mt-3">
                             <label for="duiInput" class="form-label ">DUI</label>
-                            <input type="text" class="form-control" id="duiInput" required readonly value="12345678-9">
+                            <input type="text" class="form-control" id="duiInput" required readonly name="duiInput">
                         </div>
                         <!--Formulario de telefono-->
                         <div class="col-md-6 mt-3">
                             <label for="telefonoInput" class="form-label ">Teléfono</label>
                             <input type="text" class="form-control" id="telefonoInput" required readonly
-                                value="1234-5678">
+                                name="telefonoInput">
                         </div>
                         <!--Formulario de correo electronico-->
                         <div class="col-md-6 mt-3">
                             <label for="correoInput" class="form-label ">Correo Electrónico</label>
                             <input type="text" class="form-control" id="correoInput" required readonly
-                                value="emilianito@gmail.com.sv">
+                                name="correoInput">
                         </div>
                         <!--Formulario de fecha de nacimento-->
                         <div class="col-md-6 mt-3">
                             <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
                             <input type="date" class="form-control" id="fechanInput" required readonly
-                                value="2001-07-07">
+                                name="fechanInput">
                         </div>
                         <!--Formulario de contraseña-->
                         <div class="col-md-6 mt-3">
                             <label for="direccion" class="form-label ">Dirección</label>
-                            <input type="text" class="form-control" id="direccion" required readonly
-                                value="Mi casita :D">
+                            <input type="text" class="form-control" id="direccion" required readonly name="direccion">
                         </div>
                         <!--contenedores de los botones-->
                         <div class="contenedorBotones2">
