Rutas arregladas de las paginas y header con footer

--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -325,7 +325,7 @@
                                 <div class="col-lg-4 col-md-3 col-sm-6">
                                     <!--inicio de la card-->
                                     <div class="card col-lg-12 col-md-12 col-sm-12" id="cardC">
-                                        <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                                        <a href="detalle_zapato.html" class="text15">
                                             <div class="image-wrapper2 col-lg-12">
                                                 <img src="../../recursos/imagenes/airJordan1.svg" id="imagenZapato"
                                                     alt="...">
@@ -379,7 +379,7 @@
                                 <div class="col-lg-4 col-md-3 col-sm-6">
                                     <!--inicio de la card-->
                                     <div class="card col-lg-12 col-md-12 col-sm-12" id="cardC">
-                                        <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                                        <a href="detalle_zapato.html" class="text15">
                                             <div class="image-wrapper2 col-lg-12">
                                                 <img src="../../recursos/imagenes/airJordan1.svg" id="imagenZapato"
                                                     alt="...">
@@ -433,7 +433,7 @@
                                 <div class="col-lg-4 col-md-3 col-sm-6">
                                     <!--inicio de la card-->
                                     <div class="card col-lg-12 col-md-12 col-sm-12" id="cardC">
-                                        <a href="/vistas/publico/detalle_zapato.html" class="text15">
+                                        <a href="detalle_zapato.html" class="text15">
                                             <div class="image-wrapper2 col-lg-12">
                                                 <img src="../../recursos/imagenes/airJordan1.svg" id="imagenZapato"
                                                     alt="...">
@@ -513,6 +513,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
     <script type="text/javascript" src="../../controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/publico/buscador.js"></script>
 </body>
