--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -844,6 +844,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
     <script type="text/javascript" src="../../controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/publico/detalle_zapato.js"></script>
 </body>
