Cambiar Contraseña desde configuraciones terminado

--- a/vistas/publico/configuraciones.html
+++ b/vistas/publico/configuraciones.html
@@ -196,7 +196,7 @@
                                         <!-- Botón para actualizar el registro -->
                                         <button type="button" id="agregarBtn"
                                             class="btn btn3 btn-primary shadow text18 titillium-web-regular col-4"
-                                            onclick="botonAgregar()">
+                                            onclick="botonActualizar()">
                                             Restablecer
                                         </button>
                                     </div>
