--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -79,7 +79,7 @@ TODO importante // realtando algo
         <!-- Divisor de línea superior con espacio superior -->
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <!-- Contenedor del carrusel -->
-            <div class="carousel-inner">
+            <div class="carousel-inner" id="carousel_inner">
                 <!-- Inicio del primer ítem del carrusel -->
                 <div class="carousel-item active">
                     <!-- Contenedor de las tarjetas (cards) -->
@@ -87,7 +87,7 @@ TODO importante // realtando algo
                         <!-- Tarjeta 1 -->
                         <div class="card cardM">
                             <div class="image-wrapper">
-                                <a href="/vistas/publico/buscador.html"><img
+                                <a href="../../vistas/publico/buscador.html"><img
                                         src="../../recursos/imagenes/marcas/adidas.svg" alt="..."></a>
                             </div>
                         </div>
