--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -195,13 +195,12 @@
                             </div>
                             <input id="correo_electronico_paso1" type="email" name="correo_electronico_paso1"
                                 class="form-control titillium-web-regular bordesAzul"
-                                placeholder="pollo.camperosv@gmail.com" required>
+                                placeholder="Ingresa tu correo electrónico" required>
                         </div>
                         <!--Boton de mandar código -->
                         <div class="d-flex justify-content-center">
                             <div class="text-center col-sm-12 col-md-6">
-                                <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
-                                    onclick="showPass2()">
+                                <button type="submit" class="btn btn-primary titillium-web-regular botonAzul">
                                     <i class="bi bi-send"></i>
                                     Mandar código
                                 </button>
@@ -237,9 +236,8 @@
                                     Código
                                 </label>
                             </div>
-                            <input id="codigoPaso2" type="text" name="codigoRestablecerContra"
-                                class="form-control titillium-web-regular bordesAzul" placeholder="r37grforiufewf32"
-                                required>
+                            <input id="codigoPaso2" type="text" name="codigoPaso2"
+                                class="form-control titillium-web-regular bordesAzul" required>
                         </div>
                         <!--Contenedor del texto de volver al paso anterior -->
                         <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2" for="volver">
@@ -251,7 +249,7 @@
                         <div class="d-flex justify-content-center">
                             <div class="text-center col-sm-12 col-md-6">
                                 <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
-                                    href="javascript:void(0);" onclick="showPass3()"><i class="bi bi-send"></i>
+                                    href="javascript:void(0);"><i class="bi bi-send"></i>
                                     Confirmar código</button>
                             </div>
                         </div>
@@ -304,7 +302,7 @@
                         <div class="d-flex justify-content-center">
                             <div class="text-center col-sm-12 col-md-6">
                                 <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"><i
-                                        class="bi bi-send" href="javascript:void(0);" onclick="showLogIn()"></i>
+                                        class="bi bi-send" href="javascript:void(0);"></i>
                                     Restablecer contraseña</button>
                             </div>
                         </div>
